--- a/WebTour/src/main/resources/templates/User/detailTour.html
+++ b/WebTour/src/main/resources/templates/User/detailTour.html
@@ -20,13 +20,13 @@
 	<div class="container">
 		<div class="header">
 			<h1 th:text="${tour.tourName}">Tour Name</h1>
-			<div class="stars">
+			<!-- <div class="stars">
 				<i class="fa-regular fa-star" data-value="1"></i> <i
 					class="fa-regular fa-star" data-value="2"></i> <i
 					class="fa-regular fa-star" data-value="3"></i> <i
 					class="fa-regular fa-star" data-value="4"></i> <i
 					class="fa-regular fa-star" data-value="5"></i>
-			</div>
+			</div> -->
 		</div>
 		<div class="info">
 			<div class="icon-info">
@@ -150,37 +150,106 @@
 			</div>
 
 			<div class="second-main-content">
-    <div class="container3">
-        <div class="tabs">
-            <div class="tab active" onclick="showContent('description')">Mô tả</div>
-            <div class="tab" onclick="showContent('schedule')">Lịch trình</div>
-            <div class="tab" onclick="showContent('reviews')">Đánh giá tour</div>
-        </div>
-        <div  class="content">
-            <div th:text="${tour.detail}" id="description" class="tab-content active-content">
-                <p>Phượng Hoàng là thị trấn cổ còn lưu giữ nhiều thành quách...</p>
-                <p><span>Tổng quan:</span></p>
-                <p>Bay thẳng Vietjet Air, bay giờ đẹp, tiết kiệm thời gian</p>
-                <p>Check-in Phượng Hoàng cổ trấn nổi tiếng</p>
-            </div>
+				<div class="container3">
+					<div class="tabs">
+						<div class="tab active" onclick="showContent('description')">Mô
+							tả</div>
+						<div class="tab" onclick="showContent('schedule')">Lịch
+							trình</div>
+						<div class="tab" onclick="showContent('reviews')">Đánh giá
+							tour</div>
+					</div>
+					<div class="content">
+						<div th:text="${tour.detail}" id="description"
+							class="tab-content active-content">
+							<p>Phượng Hoàng là thị trấn cổ còn lưu giữ nhiều thành
+								quách...</p>
 
-            <div id="schedule" class="tab-content">
-                <p>Lịch trình ngày 1: Khởi hành từ sân bay...</p>
-                <p>Lịch trình ngày 2: Tham quan các địa danh nổi tiếng...</p>
-            </div>
-    
-            <div id="reviews" class="tab-content">
-                <p>Khách hàng 1: "Tour rất tuyệt vời, tôi đã có trải nghiệm đáng nhớ."</p>
-                <p>Khách hàng 2: "Dịch vụ tốt, hướng dẫn viên rất thân thiện và nhiệt tình."</p>
-            </div>
-        </div>
-    </div>
-</div>
+						</div>
+
+						<div id="schedule" class="tab-content">
+							<div  th:each="schedule : ${schedules}">
+								<p class="schedule-p">
+									Ngày thứ <span class="schedule-p-span" th:text="${schedule.step}"> 
+									</span>: <span
+										class="schedule-p-span" th:text="${schedule.activity}"></span>
+								</p>
+							</div>
+
+
+						</div>
+
+						<div id="reviews" class="tab-content">
+							<div class="container4">
+								<div class="message">Đánh giá tour theo cảm nhận của bạn
+									để giúp chúng tôi cải thiện thiếu sót. Niềm vui của bạn là hạnh
+									phúc của chúng tôi.</div>
+								<button class="button" id="openReviewModal">Gửi đánh
+									giá của bạn</button>
+
+							</div>
+							<!--các review của người dùng  -->
+							<div>
+								<h3>Đánh giá từ khách hàng</h3>
+							</div>
+
+							<div class="review-list">
+							<div>
+									<th:block th:each="review : ${reviews}">
+										<p class="review-list-p">
+											<strong class="review-list-strong"
+												th:text="${review.user.fullName}">Tên người dùng</strong>
+										</p>
+										<div class="start-review">
+
+											<p class="start-review-p" th:text="${review.rate}"></p>
+											<i class="fa-regular fa-star "></i>
+										</div>
+										<span th:text="${review.comment}">Nội dung đánh giá</span>
+
+									</th:block>
+								</div>
+								
+							</div>
+
+
+							<!-- modal đánh giá -->
+							<div id="overlay"
+								style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); z-index: 999;"></div>
+
+							<!-- Modal -->
+							<div id="reviewContainer" class="review-container"
+								style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 1000;">
+								<span class="close-btn" id="closeReviewModal">&times;</span>
+								<h2>Đánh giá sản phẩm</h2>
+								<h3 th:text="${tour.tourName}">6N5Đ</h3>
+								<div class="stars">
+									<i class="fa-regular fa-star" data-value="1"></i> <i
+										class="fa-regular fa-star" data-value="2"></i> <i
+										class="fa-regular fa-star" data-value="3"></i> <i
+										class="fa-regular fa-star" data-value="4"></i> <i
+										class="fa-regular fa-star" data-value="5"></i>
+								</div>
+								<input type="text" placeholder="Nhập họ tên của bạn"> <input
+									type="email" placeholder="Nhập email của bạn">
+								<textarea id="textarea-review"
+									placeholder="Nhập nội dung đánh giá của bạn về sản phẩm này"></textarea>
+								<button id="bt-send-review" class="submit-btn">Gửi đánh
+									giá</button>
+							</div>
+
+						</div>
+
+
+
+					</div>
+				</div>
+			</div>
 
 		</div>
 	</div>
 	<script src="../js/detailTour.js"></script>
-	 <script src="/js/header.js"></script>
+	<script src="/js/header.js"></script>
 
 </body>
 </html>
